@startuml
'https://plantuml.com/class-diagram

/' Fill out your book retail system design by
adding classes, relationships, and methods
'/


class Book{
-String author
-BigDecimal length
}
class ProductInformation{
-String asin
-String displayName
-String description
-Set<String> imageUrls
}
class Genre{
-Title
-bookType
}



Book o-- ProductInformation
ProductInformation o-- Genre
@enduml